--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,15 @@
   "name": "angular-seed",
   "description": "A starter project for AngularJS",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/jshlyd/angular-papa-seed",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.2.x",
-    "angular-route": "1.2.x",
-    "angular-loader": "1.2.x",
-    "angular-mocks": "~1.2.x",
-    "html5-boilerplate": "~4.3.0"
+    "angular": "~1.3",
+    "angular-mocks": "~1.3",
+    "angular-bootstrap": "~0.12",
+    "angular-ui-router": "~0.2",
+    "bootstrap": "~3.1",
+    "fontawesome": "~4.2.0"
   }
 }
