--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
+  "name": "angular-seed-styleguided",
   "description": "A starter project for AngularJS",
-  "version": "0.0.0",
-  "homepage": "https://github.com/jshlyd/angular-papa-seed",
+  "version": "0.0.1",
+  "homepage": "https://github.com/jshlyd/angular-seed-styleguided",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -12,5 +12,8 @@
     "angular-ui-router": "~0.2",
     "bootstrap": "~3.1",
     "fontawesome": "~4.2.0"
+  },
+  "resolutions": {
+    "angular": "~1.3"
   }
 }
