--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "karma-junit-reporter": "^0.2.2"
   },
   "scripts": {
+
+    "replace-name-preview": "/node_modules/replace/bin/replace.js myApp YOUR_APP_NAME app -r -p --include='*.js,*.html' --exclude=bower_components",
+    "replace-name": "/node_modules/replace/bin/replace.js myApp YOUR_APP_NAME app -r --include='*.js,*.html' --exclude=bower_components",
+
     "postinstall": "bower install",
 
     "prestart": "npm install",
